# python-api-tests

./: .flake8  .pre-commit-config.yaml  README.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflow/: tests.yml
.github/workflows/: tests.yml
common/: api_builder.py  deco.py  models.py  report_html.py  singltone_like.py  swagger.py
common/report/: data_swagger.yaml
docs/: index.html
docs/src/: script.js
fixtures/: app.py  common_models.py  constants.py  requests.py  validator.py
fixtures/auth/: api.py  model.py
fixtures/items/: api.py  model.py
fixtures/register/: api.py  model.py
fixtures/store/: api.py  model.py
fixtures/user_info/: api.py  model.py
report/: index.html
swagger_report/: data_swagger.yaml  index.html
swagger_report/json_results/: d5c1de51-3871-4cc3-83c6-9af8e4187493.json
swagger_report/src/: script.js
tests/auth/: test_auth.py
tests/auth/report/: data_swagger.yaml  index.html
tests/register/: test_registers.py
tests/stores/: test_add_store.py  test_get_store.py
tests/swagger_report/: index.html
tests/user_info/: test_add_user_info.py  test_delete_user_info.py  test_get_user_info.py  test_update_user_info.py  test_user_info_builder.py
